Prevent horizontal scrolling by adding `overflow-x: hidden` to the `body` style.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -143,6 +143,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     --tw-bg-opacity: 1;
     background-color: rgb(var(--ui-background) / var(--tw-bg-opacity, 1));
     font-family: Open Sans, sans-serif;
